welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: type int
var nbpas:int=0
          ^Variables:3: error: value update is not a member of Boolean
while (estSurBiscuit()=false){
       ^Variables:6: error: not found: type int
var dejafait:int=0
             ^